tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-19/test000006.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c
Line: 17
Stack: 
	#0 00000045 in remove_from_list (head=20653248, node=20653824) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:17
	#1 00000087 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:38
Info: 
	address: (Add w64 16
         (ReadLSB w64 8 U0:[(Add w32 7
                                     N0:(Extract w32 0 (Add w64 18446744073688897800
                                                                (ReadLSB w64 16 a1))))=(Read w8 15 a1),
                            (Add w32 6 N0)=(Read w8 14 a1),
                            (Add w32 5 N0)=(Read w8 13 a1),
                            (Add w32 4 N0)=(Read w8 12 a1),
                            (Add w32 3 N0)=(Read w8 11 a1),
                            (Add w32 2 N0)=(Read w8 10 a1),
                            (Add w32 1 N0)=(Read w8 9 a1),
                            N0=(Read w8 8 a1)] @ a1))
	example: 16
	range: [0, 18446744073709551615]
	next: object at 20268432 of size 3
		MO7[3] allocated at global:.str
